2002-09-25 Yann Hodique <Yann.Hodique@lifl.fr>
	* Implemented some features in distpart
	* Fixed a few bugs

2002-09-20 Roberto Raggi <raggi@cli.di.unipi.it>
	* Added statement rules to c++ parser

2002-09-19 Roberto Raggi <raggi@cli.di.unipi.it>
	* Improved code completion

2002-09-17 Roberto Raggi <raggi@cli.di.unipi.it>
	* Added problem reporter to c++ support
	
2002-09-05 Harald Fernengel <harry@kdevelop.org>
	* Added notification configuration dialog and notifications
	  for finished processes (off by default)

2002-08-31 Jakob Simon-Gaarde <jsgaarde@tdcspace.dk>
     * Connected the last toolbar buttons
     * I hereby declare trollprojectpart ready for alpha release :)

2002-08-31 Jakob Simon-Gaarde <jsgaarde@tdcspace.dk>
     * trollproject - added compiler/linker flags, includepath

2002-08-30 John Firebaugh <jfirebaugh@kde.org>
     * Implemented dynamic loading/unloading of plugins.
       Some project plugins need to be fixed; I guess they expect to
       get a projectLoaded signal, but a project is already loaded.
       Might want to eventually refactor plugin loading code in
       projectmanager to plugincontroller.

2002-08-30 Jakob Simon-Gaarde <jsgaarde@tdcspace.dk>
     * removed trollproject runoptionwidget using common lib/project/runoptionswidget
     * added browse button to common runoptionwidget

2002-08-29 Jakob Simon-Gaarde <jsgaarde@tdcspace.dk>
  * Trollproject Part
     * added new project run options widget

2002-08-28 Mickael Marchand <marchand@kde.org>
  * Subversion kpart:
    * Added log window to display retrieved logs from repositery

2002-08-27 Mickael Marchand <marchand@kde.org>
  * Subversion kpart:
    * Notifications displayed in 'Application' view
    * Prompt dialog (login/pass) added (untested yet)
    * New SVN functions support : Revert, Status
    * Removed "SVN:" stuff from logs

2002-08-27 Harald Fernengel <harry@kdevelop.org>
	* Added ability to edit toolbars in SDI and MDI mode